--- a/css/estilos.css
+++ b/css/estilos.css
@@ -11,3 +11,8 @@ body{
     color: brown;
     font-size: 50px;
 }
+.cabecera{
+    background-color: cadetblue;
+    color: black;
+    font-size: 60px;
+}
