--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,20 @@
 body{
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
-    color: blanchedalmond;
+    color: rgb(209, 138, 30);
 }
 .contenedor{
     border: 2px solid aqua; 
     padding: 10px;   
 }
+.contenido{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    text-align: center;
+    color: black;
+}
 #titulo{
     color: brown;
-    font-size: 50px;
+    font-size: 30px;
+    text-align: left;
 }
